
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Jun-2013 Jean-Marie Simonet
 + [#31106] Added Belgian flag for mod_languages. Thanks Fonny Smets 

06-Jun-2013 Michael Babker
 + [#30324] *Added ability to restrict the number of displayed results to mod_related_items.  Thanks Ben Tasker and Jean-Marie Simonet

04-Jun-2013 Jean-Marie Simonet
 ^ [#30973] Bootstrap 2.3.2 update. Thanks Anibal Sanchez
 # [#30757] Unpublished blog items output an extra DIV closure, breaking layout. Thanks David Hurley
 # [#30990] 404 Component not found" doesn't added to redirect component, more. Thanks Ofer Cohen

02-Jun-2013 Michael Babker
 ^ Sync Github package to Platform 13.1

01-Jun-2013 Michael Babker
 # [#31057] Missing Read More Button in editing articles.  Thanks Hans Kuijpers
 # [#30909] Batch process modules doesnt allow new module positions.  Thanks Chad Windnagle
 # [#31039] Error when a 'Manager' deletes a category.  Thanks Tobias Zulauf
 # [#30693] Unclosed span tag in permissions field.  Thanks Dennis Hermatski
 # [#31045] HITS Column Admin Panel.  Thanks David Hurley
 # [#31034] Not colored text as in joomla 2.5 for com_redirect.  Thanks Tobias Zulauf
 # [#30544] Article Alternative Layout is not applied in Single Article menu item.  Thanks Dennis Hermatski
 # [#31026] Fatal error: Class 'JFile' not found when saving content override.  Thanks Roland Dalmulder
 ^ [#31032] 'Default' toolbar buttons with different labels.  Thanks Tobias Zulauf
 ^ [#31033] System messages with the "X".  Thanks Tobias Zulauf
 ^ [#31008] Sync up Platform Bootstrap
 # [#30923] Notice in Tags.  Thanks Elin Waring
 # [#30987] Menu type alias does not behave as expected [regression].  Thanks Elin Waring